src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>AMP_power__c</fullName>
        <label>AMP power</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AbnormalNumbe__c</fullName>
        <label>异常人数（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>数量（台）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualIncome__c</fullName>
        <label>年收入（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedSituation__c</fullName>
        <label>使用状况</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>使用中</fullName>
                </value>
                <value>
                    <fullName>停用</fullName>
                </value>
                <value>
                    <fullName>维修</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AreaNormal__c</fullName>
        <formula>customer__r.DepartmentZC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <label>资产类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>资产</fullName>
                    <default>true</default>
                    <label>资产</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetClassification__c</fullName>
        <label>客户资产分类</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>本公司客户资产</fullName>
                </value>
                <value>
                    <fullName>非本公司客户资产</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetsEncoding__c</fullName>
        <displayFormat>ZC{0000000}</displayFormat>
        <label>资产编码</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BXtx__c</fullName>
        <formula>IF(  warrantyEnd__c  -  TODAY() &lt; 30, &quot;需要提醒&quot;, &quot;无&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保修提醒</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuyTime__c</fullName>
        <label>准分子购买时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CataractCount__c</fullName>
        <label>白内障数量（人）</label>
        <summarizedField>CustomObject5__c.CataractExamination__c</summarizedField>
        <summaryForeignKey>CustomObject5__c.equipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cataract__c</fullName>
        <formula>IF(TotalCheckQuantity__c = 0, 0, CataractCount__c / TotalCheckQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>白内障%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChangeItems__c</fullName>
        <label>变更对象</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckQuantity__c</fullName>
        <label>总检查量(人) 停用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>TEXT(customer__r.city__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户：市</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>客户端</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompetitionModel__c</fullName>
        <label>竞争型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>竞争厂家</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversionRate__c</fullName>
        <formula>IF( DailyOutpatient__c=0,0,DailyCheck__c  /  DailyOutpatient__c)</formula>
        <label>日门诊转化率(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CustomerGrade__c</fullName>
        <formula>TEXT(customer__r.clientlevel__c)</formula>
        <label>#客户等级</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>customer__r.Name</formula>
        <label>#客户名字</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DailyCheck__c</fullName>
        <label>日均检查量（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailyOutpatient__c</fullName>
        <label>日门诊量（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateExpiry__c</fullName>
        <label>续保终止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfretirement__c</fullName>
        <label>报废日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>手术医生</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurableYear__c</fullName>
        <label>准分子标准使用年限（年）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurableYears__c</fullName>
        <label>飞白标准使用年限（年）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earnings__c</fullName>
        <label>收益（万元）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EndingDate__c</fullName>
        <label>试用结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentInstaller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备安装人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SBLsYL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EquipmentOperator__c</fullName>
        <label>设备操作人</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentTime__c</fullName>
        <formula>TODAY()  -   InstalledTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备运行时间（天）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>设备名称</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentname__c</fullName>
        <formula>product__r.Cname__c</formula>
        <label>#设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentunittype__c</fullName>
        <formula>product__r.SpecificationType__c</formula>
        <label>#设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtensionInsurance__c</fullName>
        <label>是否续保</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eyetraker__c</fullName>
        <label>Eyetracker型号</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMI</fullName>
                </value>
                <value>
                    <fullName>Precitec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FactoryOutlet__c</fullName>
        <label>是否徕卡厂家直销</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>最新手术量录入时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>设备使用状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>正常使用</fullName>
                    <default>true</default>
                    <label>正常使用</label>
                </value>
                <value>
                    <fullName>退换货</fullName>
                </value>
                <value>
                    <fullName>报废</fullName>
                </value>
                <value>
                    <fullName>停用</fullName>
                </value>
                <value>
                    <fullName>已销售</fullName>
                </value>
                <value>
                    <fullName>注册样机</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <inlineHelpText>最新签署的保修合约保修期</inlineHelpText>
        <label>最新签署保修期</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundusNumber__c</fullName>
        <label>眼底数量（人）</label>
        <summarizedField>CustomObject5__c.FundusExamination__c</summarizedField>
        <summaryForeignKey>CustomObject5__c.equipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fundus__c</fullName>
        <formula>IF(TotalCheckQuantity__c = 0, 0, FundusNumber__c / TotalCheckQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>眼底%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GuaranteeCustomer__c</fullName>
        <label>是否为保修客户</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalMedical__c</fullName>
        <label>院内体检（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IR_power__c</fullName>
        <label>IR power</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstalledTime__c</fullName>
        <label>装机时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introductions__c</fullName>
        <label>特别配置说明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MalapropismBrand__c</fullName>
        <label>飞白品牌</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zimmer</fullName>
                </value>
                <value>
                    <fullName>博士伦</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaterialCoding__c</fullName>
        <formula>ProductS__r.MaterialCoding__c</formula>
        <label>物料编码</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>飞白型号</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LENSX LASER</fullName>
                </value>
                <value>
                    <fullName>LLS-fs 3D</fullName>
                </value>
                <value>
                    <fullName>Victus</fullName>
                </value>
                <value>
                    <fullName>Z8</fullName>
                </value>
                <value>
                    <fullName>VX-120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MolecularBrand__c</fullName>
        <label>准分子品牌</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>阿玛仕</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>尼德克</fullName>
                </value>
                <value>
                    <fullName>蔡司</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>博士伦</fullName>
                </value>
                <value>
                    <fullName>雷赛</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MolecularModel__c</fullName>
        <label>准分子型号</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EX500</fullName>
                </value>
                <value>
                    <fullName>Mel90</fullName>
                </value>
                <value>
                    <fullName>Mel80</fullName>
                </value>
                <value>
                    <fullName>VISX S4 IR</fullName>
                </value>
                <value>
                    <fullName>500E</fullName>
                </value>
                <value>
                    <fullName>750S</fullName>
                </value>
                <value>
                    <fullName>1050RS</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NeedTreat__c</fullName>
        <label>需要治疗（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPDNumbers__c</fullName>
        <label>门诊数量（人）</label>
        <summarizedField>CustomObject5__c.OutpatientVolume__c</summarizedField>
        <summaryForeignKey>CustomObject5__c.equipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OPD__c</fullName>
        <formula>IF(TotalCheckQuantity__c = 0, 0, OPDNumbers__c / TotalCheckQuantity__c)</formula>
        <label>门诊%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单号</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>设备</relationshipLabel>
        <relationshipName>SBOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnManage__c</fullName>
        <formula>Owner:User.Manager.Id</formula>
        <label>#所有人经理</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMMA__c</fullName>
        <label>最新PMMA通过日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Panel_PC__c</fullName>
        <label>Panel PC型号</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Panel PC (Zeus) for AMARIS</fullName>
                </value>
                <value>
                    <fullName>Panel PC (Zeus) for WORKSTATION</fullName>
                </value>
                <value>
                    <fullName>Panel-PC Kit (Zeus) replacing Onyx on Amaris 500E</fullName>
                </value>
                <value>
                    <fullName>Panel-PC Kit (Zeus) replacing Onyx on AMARIS and 750S</fullName>
                </value>
                <value>
                    <fullName>Panel-PC (Zeus) replacing Onyx on Workstation</fullName>
                </value>
                <value>
                    <fullName>Panel PC (ONYX) for AMARIS</fullName>
                </value>
                <value>
                    <fullName>Panel PC (ONYX) for WORKSTATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhysicalQuantity__c</fullName>
        <label>体检数量（人）</label>
        <summarizedField>CustomObject5__c.PhysicalExamination__c</summarizedField>
        <summaryForeignKey>CustomObject5__c.equipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Physical__c</fullName>
        <formula>IF(TotalCheckQuantity__c = 0, 0, PhysicalQuantity__c / TotalCheckQuantity__c)</formula>
        <label>体检%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PlaceTo__c</fullName>
        <label>放置地</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>特检</fullName>
                </value>
                <value>
                    <fullName>眼底</fullName>
                </value>
                <value>
                    <fullName>屈光</fullName>
                </value>
                <value>
                    <fullName>白内障</fullName>
                </value>
                <value>
                    <fullName>门诊</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductModelCG__c</fullName>
        <formula>ProductS__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>常规产品型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductModel__c</fullName>
        <label>欧堡型号</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daytona</fullName>
                </value>
                <value>
                    <fullName>200Tx</fullName>
                </value>
                <value>
                    <fullName>P200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductNameCG__c</fullName>
        <formula>ProductS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>常规产品名称(停)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>常规产品名称</label>
        <referenceTo>Product3__c</referenceTo>
        <relationshipLabel>设备</relationshipLabel>
        <relationshipName>Kzi8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <label>购买日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseTime1__c</fullName>
        <label>飞秒购买时间1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseTime2__c</fullName>
        <label>飞秒购买时间2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>年手术量或检查数量（例）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rates__c</fullName>
        <label>收费标准（元）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refraction__c</fullName>
        <formula>IF(TotalCheckQuantity__c = 0, 0, RefractiveNumber__c / TotalCheckQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>屈光%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RefractiveNumber__c</fullName>
        <label>屈光数量（人）</label>
        <summarizedField>CustomObject5__c.RefractiveIndex__c</summarizedField>
        <summaryForeignKey>CustomObject5__c.equipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RegularVendors__c</fullName>
        <formula>ProductS__r.ProductLine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>常规品牌</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelevanceRatio__c</fullName>
        <label>检出率（%）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RenewalDate__c</fullName>
        <label>续保开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP__c</fullName>
        <label>SP版本号</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SP5.0</fullName>
                </value>
                <value>
                    <fullName>SP6.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesChannels__c</fullName>
        <label>销售渠道</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立直销</fullName>
                </value>
                <value>
                    <fullName>区域代理</fullName>
                </value>
                <value>
                    <fullName>个案代理</fullName>
                </value>
                <value>
                    <fullName>蓝海之略</fullName>
                </value>
                <value>
                    <fullName>远程视界</fullName>
                </value>
                <value>
                    <fullName>全科医疗</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>爱尔集团</fullName>
                </value>
                <value>
                    <fullName>华厦集团</fullName>
                </value>
                <value>
                    <fullName>华正集团</fullName>
                </value>
                <value>
                    <fullName>朝聚眼科</fullName>
                </value>
                <value>
                    <fullName>新视界</fullName>
                </value>
                <value>
                    <fullName>阿玛施集团</fullName>
                </value>
                <value>
                    <fullName>普瑞集团</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SBLtAy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scout_DB__c</fullName>
        <label>Scout-DB序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scout_VK__c</fullName>
        <label>Scout-VK序列号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondBrand1__c</fullName>
        <label>飞秒品牌1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>蔡司</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>科林</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondBrand2__c</fullName>
        <label>飞秒品牌2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>蔡司</fullName>
                </value>
                <value>
                    <fullName>爱尔康</fullName>
                </value>
                <value>
                    <fullName>科林</fullName>
                </value>
                <value>
                    <fullName>AMO</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondBuyTime__c</fullName>
        <label>飞白购买时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SecondModel2__c</fullName>
        <label>飞秒型号2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VisuMAX</fullName>
                </value>
                <value>
                    <fullName>FS200</fullName>
                </value>
                <value>
                    <fullName>intyalase</fullName>
                </value>
                <value>
                    <fullName>达芬奇</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondModel__c</fullName>
        <label>飞秒型号1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VisuMAX</fullName>
                </value>
                <value>
                    <fullName>FS200</fullName>
                </value>
                <value>
                    <fullName>intyalase</fullName>
                </value>
                <value>
                    <fullName>达芬奇</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceCharge__c</fullName>
        <label>年约定保修金额（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServicerequestDate__c</fullName>
        <label>最新服务请求日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>试用开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TotalCheckQuantity__c</fullName>
        <formula>PhysicalQuantity__c + RefractiveNumber__c + CataractCount__c + FundusNumber__c + OPDNumbers__c</formula>
        <label>总检查量（销售）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalEarnings__c</fullName>
        <formula>Rates__c * CheckQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>欧堡总收益（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOperation__c</fullName>
        <label>屈光手术年手术总量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialTime__c</fullName>
        <label>试用时间（Hr）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TryOut__c</fullName>
        <label>是否试用</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsageAmount1__c</fullName>
        <label>飞秒使用量（人）1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsageAmount2__c</fullName>
        <label>飞秒使用量（人）2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsefulLife__c</fullName>
        <label>标准使用年限（年）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhetherChange__c</fullName>
        <label>是否变更</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhetherCreatePolling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>勾选后根据保修开始日期和保修结束日期自动生成巡检记录</inlineHelpText>
        <label>是否生成巡检</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015__c</fullName>
        <label>2015年手术量汇总（ORK）</label>
        <summarizedField>CustomObject1__c.ORK_number__c</summarizedField>
        <summaryFilterItems>
            <field>CustomObject1__c.Name</field>
            <operation>contains</operation>
            <value>2015年</value>
        </summaryFilterItems>
        <summaryForeignKey>CustomObject1__c.shebei__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2016__c</fullName>
        <label>2016年手术量汇总（ORK）</label>
        <summarizedField>CustomObject1__c.ORK_number__c</summarizedField>
        <summaryFilterItems>
            <field>CustomObject1__c.Name</field>
            <operation>contains</operation>
            <value>2016</value>
        </summaryFilterItems>
        <summaryForeignKey>CustomObject1__c.shebei__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2017_TPRK__c</fullName>
        <label>装机至2017年手术量汇总（TPRK）</label>
        <summarizedField>CustomObject1__c.TPRK__c</summarizedField>
        <summaryFilterItems>
            <field>CustomObject1__c.Name</field>
            <operation>contains</operation>
            <value>2017</value>
        </summaryFilterItems>
        <summaryForeignKey>CustomObject1__c.shebei__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>